...
    func show(quiz result: QuizResultsViewModel){
        
        let model = AlertModel(
            title: result.title,
            message: result.text,
            buttonText: result.buttonText,
            identifier: "roundResults") { [weak self] in
                
                guard let self = self else {return}
                
                presenter.restartRound()
            }
        
...
