...
    private let questionsAmount: Int = 10
    private let stepValue: Int = 1
    private let timeToShowBorder = 1.0
    private let initCorrectAnswers = 0
    private let initCurrentQuestionIndex = 0
    private let finalTitleAlert = "Этот раунд окончен!"
    private let finalBtnAlertText = "Сыграть еще раз"
    
    private let statisticService: StatisticServiceProtocol!
    private var questionFactory: QuestionFactoryProtocol?
    private var viewController: MovieQuizViewControllerProtocol?
    
    private var correctAnswers: Int = 0
...
